--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,7 +1,7 @@
-/* General styles */
 .home {
   position: relative;
   overflow: hidden;
+  padding: 1rem 0;
 }
 
 .container {
@@ -16,23 +16,29 @@
   align-items: center;
   margin: 0.25rem 0;
   gap: 1.25rem;
+  margin-bottom: 95px;
 }
 
 .divider {
   width: 1.25rem;
   height: 0.1 rem;
   background-color: #ABDDB1;
+  margin-bottom: 90px;
   
 }
 
 .subtitle {
-  font-size: 1rem; /* Adjusted for smaller screens */
+  font-size: 1rem;
+  margin-bottom: 95px; /* Adjusted for smaller screens */
 }
 
 .title {
   font-size: 2rem; /* Adjusted for smaller screens */
   margin: 1.25rem 0;
   max-width: 900px;
+  margin-bottom: 95px;
+  
+  
 }
 
 .info {
@@ -47,6 +53,7 @@
   margin-top: 1rem;
   align-items: center;
   gap: 1.25rem;
+  
 }
 
 .icon {
@@ -81,13 +88,14 @@
   
 }
 
-.cta-button:hover {
+.cta-button:hover  {
   background-color: #fff;
   color: #007BFF;
+  
 }
 
 .cta-text {
-  margin-top: 0.75rem;
+   margin-top: 0.75rem; 
 }
 
 .image-container {
